# nameof

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  build.py  cmake_build_msvc.bat  conanfile.py  nameof.cpp  nameofcpp
.ci/: install.sh  run.sh
.github/workflows/: cmake.yml  macos.yml  ubuntu.yml  windows.yml
.travis/: install.sh
cmake/GenPkgConfig/: GenPkgConfig.cmake
doc/: limitations.md  reference.md
example/: CMakeLists.txt  example.cpp  example_custom_name.cpp  example_nonascii_name.cpp
include/: nameof.hpp
src/: nameof.hpp
test/: CMakeLists.txt  test.cpp  test_aliases.cpp  test_no_rtti.cpp
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
